--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AnimalDoctor</title>
+  <title>Animal Doctor</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="title" content="Landing Page - Animal Doctor">
+  <meta name="description" content="Landing page based on the design of Christina Vlastiuk">
+  <meta property="og:title" content="Landing Page - Animal Doctor">
+  <meta property="og:description" content="Landing page based on the design of Christina Vlastiuk">
+  <meta property="og:type" content="Website">
+  <meta property="og:url" content="https://chen1223.github.io/landing-page-animal-doctor/">
+  <meta property="og:image" content="https://chen1223.github.io/landing-page-animal-doctor/assets/img/hero1.png">
+  <meta property="og:image:alt" content="Landing Page - Animal Doctor">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
