--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <meta property="og:description" content="Landing page based on the design of Christina Vlastiuk">
   <meta property="og:type" content="Website">
   <meta property="og:url" content="https://chen1223.github.io/landing-page-animal-doctor/">
+  <meta name="google-site-verification" content="cH6AvT1zK9lSn4NmcBxxGWg9JptxRBgH6WewJ3TccE4"/>
   <meta property="og:image" content="https://chen1223.github.io/landing-page-animal-doctor/assets/img/hero1.png">
   <meta property="og:image:alt" content="Landing Page - Animal Doctor">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
